--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qPT-4c-FIO">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <!--Users-->
         <scene sceneID="ny5-z8-NbG">
             <objects>
-                <tableViewController id="Ecz-Ht-lZG" sceneMemberID="viewController">
+                <tableViewController id="Ecz-Ht-lZG" customClass="MainTVC" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="TPt-Br-40U">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -50,7 +50,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vbq-6q-0KQ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vbq-6q-0KQ">
                                 <rect key="frame" x="50" y="114" width="275" height="146.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Vbq-6q-0KQ" secondAttribute="height" multiplier="15:8" id="HdH-C8-jD7"/>
@@ -92,10 +92,10 @@
                         <viewLayoutGuide key="safeArea" id="RSi-ct-7Zr"/>
                     </view>
                     <connections>
-                        <outlet property="emailOutlet" destination="e42-WV-CV2" id="giN-Wd-tai"/>
-                        <outlet property="imageView" destination="Vbq-6q-0KQ" id="tHI-Jh-3HF"/>
-                        <outlet property="nameOutlet" destination="wX7-Uy-Hjb" id="JEy-KN-ycZ"/>
-                        <outlet property="phoneOutlet" destination="aJo-kn-Kca" id="XnJ-dg-6Dd"/>
+                        <outlet property="detailImageView" destination="Vbq-6q-0KQ" id="7mc-i7-M0h"/>
+                        <outlet property="emailLabel" destination="e42-WV-CV2" id="hpQ-hs-Ox3"/>
+                        <outlet property="nameLabel" destination="wX7-Uy-Hjb" id="ETZ-LD-dwg"/>
+                        <outlet property="phoneLabel" destination="aJo-kn-Kca" id="a4e-iG-nDm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j6Z-9M-Q4l" userLabel="First Responder" sceneMemberID="firstResponder"/>
